--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -4,6 +4,7 @@
   --s-black: hsl(0, 0%, 14%);
   --p-white: hsl(0, 0%, 94%);
   --s-white: hsl(0, 0%, 96%);
+  --g-white: hsl(0, 0%, 76%);
 }
 * {
   padding: 0 0 0 0;
@@ -20,96 +21,75 @@ section#index {display:none !important;border:2px solid red;}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* header */
-  section#header {
+  header {
+    min-height:min-content;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5vw 2vw;
-    transition: 0.5s ease-in-out;
-    font-size: 2vw;
-    position:relative;
+    padding: 0vw 4vw;
+    font-size: 1.5vw;
   }
-  #header img {
-    max-width: 15vw;
+  header.sticky {
+    position: fixed;
+    background-color: #fff;
+    width:100%;
+    z-index:999;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  header:hover {
+    box-shadow: 0 0 5px #000;
+  }
+  header:hover ul li {
+    padding: 2vw 0vw;
+  }
+  header img {
+    max-width: 5vw;
     aspect-ratio: 1/0.5;
   }
-  #header ul {
-    margin-left: auto;
-    margin-right: 2vw;
+  header ul {
+    margin:0 2vw 0 auto;
     display:flex;
     flex-direction: row;
-    gap:1.5vw;
+    gap:3.5vw;
   }
-  #header ul li {
-    color: var(--s-white);
+  header ul li {
+    color: var(--s-black);
+    padding: 1.5vw 0vw;
     list-style:none;
+    transition: all 0.5s ease;
   }
-  #header ul li a {
+  header ul li a {
     text-decoration:none;
-    color: var(--s-white);
+    color: var(--s-black);
+    padding: 1vw 0vw;
+    font-weight: 600;
   }
-  #header .search_user {
+  header ul li:hover a {
+    color: var(--g-black);
+  }
+  header .search_user {
     display: flex;
     align-items: center;
-    gap:2vw;
-    color: var(--s-white);
+    gap:3vw;
+    color: var(--s-black);
   }
   .search_user input[type="checkbox"] {
     width: 1.5vw;
     height: 1.5vw;
     cursor: pointer;
   }
-  .search_user input[type="checkbox"]:checked {
-    border-color: #008000;
-  }
-  
-  
+  .search_user input[type="checkbox"]:checked {border-color: #008000;}
+
 /* End Header and getIn Home page elements */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Intern section Start */
   section#intern {
     background-color: var(--p-blue);
-    padding: 1.5vw 1.5vw;
+    padding: 2.0vw 1.5vw;
     font-size: 1.2vw;
+    display: block;
   }
   #intern span a {
     color:#fff;
@@ -124,48 +104,37 @@ section#index {display:none !important;border:2px solid red;}
     float:right;
     cursor:pointer;
   }
-/* End of Intern */
-
-
-
-
-/* MAIN */
-  main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow-x: hidden;
-  }
-/* main */ 
-
-
+/* End of Intern */ 
 
 
 /* About section Start */
   section#about {
     height: max-content;
-    min-height:85vh;
     display: flex;
     flex-direction: column;
     gap:1vw;
-    
+    overflow-x: hidden;
+    border: 0px solid floralwhite;
   }
   #about .aboutTexts {
-    margin-top: auto;
-    min-height: 30vh !important;
-    width:60%;
+    width:70%;
     padding:4vw;
-    color:#fff;
+    color:var(--s-black);
+    border: 0px solid firebrick;
+    display:flex;
+    gap:3vw;
+    flex-direction: column;
+    justify-content: center;
   }
   #about .aboutTexts p {
-    font-size:3vw;
-    margin-bottom: 1vw;
+    font-size:4vw;
+    margin: 0 auto 1vw 0;
   }
   #about .aboutTexts span:nth-child(2) {
     display: block;
     line-height: 1.6;
     letter-spacing: 0.1vw;
-    font-size: 1.6vw;
+    font-size: 2.6vw;
   }
   #about button {
     max-width:max-content;
@@ -175,7 +144,8 @@ section#index {display:none !important;border:2px solid red;}
     border:none;
     margin-top: 1vw;
     line-height: 1;
-    font-size: 1.6vw;
+    font-size: 1.8vw;
+    display: block;
   }
   #about button i:nth-child(2) {
     margin:auto 0 0 4vw;
@@ -184,6 +154,7 @@ section#index {display:none !important;border:2px solid red;}
     display:none;
   }
   #about img {
+    display: none;
     filter:brightness(70%);
     position:absolute;
     top:0;
@@ -196,12 +167,109 @@ section#index {display:none !important;border:2px solid red;}
 /* End of About */
 
 
+/* Start of four */
+section#four {
+    padding:3vw 2vw 1vw 3vw;
+    border-bottom: 0.1vw solid var(--g-white);
+  }
+  #four #allNewCards {
+    padding: 2vw 6vw;
+    display:flex;
+    flex-wrap: wrap;
+    gap:0.25vw;
+    font-size: 1.4vw;
+  }
+  #four h2 {
+    margin-bottom: 1vw;
+    font-weight: 100;
+    font-size: 3vw;
+  }
+  #four .fourCards {
+    flex-basis: calc(50% - 0.25vw);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding:1vw;
+    background-color: hsl(0, 0%, 90%);
+  }
+  #four .fourCards:hover {
+    background-color: hsl(0, 0%, 87%);
+  }
+  #four .fourCards:active {
+    outline:3px solid var(--s-blue);
+  }
+  #four .fourCards bdo {
+    margin-top: 2vw;
+    margin-bottom: 1vw;
+    font-size: 120%;
+    font-weight: 600;
+  }
+  #four .fourCards p {
+    margin-bottom: 2vw;
+    font-size: 120%;
+  }
+  #four .fourCards i {
+    color: var(--s-blue);
+  }
+/* End of fourCards */
 
+/* MAIN */
+main {
+  display: flex;
+  border:2px solid blue;
+}
+/* main */
+
+/* article */
+article {
+  border:2px solid green;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+/* article */
+
+/* Navigation panel on the side */
+.nav-panel {
+  margin-top: 6vw;
+  z-index: 999;
+  height:max-content;
+  font-size: 1.4vw;
+  min-width: 15vw;
+  position:relative;
+}
+.nav-panel ul {
+  list-style: none;
+  margin-left: 1vw;
+  position:absolute;
+  top:0;left:0;
+}
+.nav-panel li {
+  
+}
+.nav-panel a {
+  display: block;
+  color: var(--s-black);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 1.5vw 3vw 1.5vw 1vw;
+  white-space: nowrap;
+  border-left: 0.3vw solid gray;
+}
+.nav-panel a:hover {
+  color: var(--p-black);
+}
+.nav-panel a.active {
+  border-left: 0.3vw solid royalblue;
+}
+/* Navigation panel on the side */
 
 
 /* Flip recent laptops */
 #recentWorks {
-  padding:3vw 2vw 1vw 3vw;
+  padding:6vw 2vw 1vw 3vw;
+  scroll-snap-align: center;
+  border:2px solid red;
 }
 #recentWorks #span {
 	font-size: 3vw;
@@ -209,9 +277,9 @@ section#index {display:none !important;border:2px solid red;}
 #recentWorks #honey {
 	display: flex;
   flex-wrap: wrap;
-  gap:6vw;
+  gap:4vw;
 	justify-content: space-between;
-	padding: 4vw 6vw;
+	padding: 2vw 4vw;
   border: 0px solid blue;
 }
 #recentWorks #honey .rw {
@@ -285,23 +353,26 @@ section#exploreTech {
   display: flex;
   flex-direction: column;
   gap:2vw;
-}
-section#exploreTech #techCards {
-  display:flex;
-  flex-wrap: wrap;
-  gap:0.50vw;
-  padding:0 6vw;
+  border: 2px dotted #0874e8;
+  height:min-content;
 }
 #exploreTech h2 {
   margin-bottom: 1vw;
   font-weight: 100;
   font-size: 3vw;
 }
+section#exploreTech #techCards {
+  display:flex;
+  flex-wrap: wrap;
+  gap:0.50vw;
+  padding:0 0vw;
+}
 #exploreTech .tCards {
   width: calc(50% - 0.55vw);
   background-color: hsl(0, 0%, 90%);
   font-size: 1.3vw;
-  height: 100%;
+  outline:0px solid rebeccapurple;
+  max-height: max-content;
 }
 #exploreTech .tCards .tContent {
   background-color: hsl(0, 0%, 90%);
@@ -322,6 +393,7 @@ section#exploreTech #techCards {
 #exploreTech .tCards .tHead {
   flex-basis: 50%;
   padding:1vw;
+  max-height:100%;
 }
 #exploreTech .tCards .tHead .tIcons {
   border:none;
@@ -345,7 +417,7 @@ section#exploreTech #techCards {
 
 /* focus within */
 .tCards:focus-within {
-  height: auto;
+  
 }
 .tCards:not(:focus-within) .tContent {
   display: none !important;
@@ -359,7 +431,7 @@ section#exploreTech #techCards {
   transform: scale(1.5) !important;
 }
 #exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(3) {
-  display:inline-block !important;
+  display:inline-block;
 }
 #exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(2) {
   display:none;
@@ -377,7 +449,7 @@ section#exploreTech #techCards {
 #exploreTech .tCards .tContent .tcLinks {
   margin-bottom: 1vw;
   font-size: 90%;
-  width: calc(50% - 0.25em);
+  width: calc(50% - 0.25vw);
   display:flex;
   flex-direction:column;
   gap:0.5vw;
@@ -388,25 +460,24 @@ section#exploreTech #techCards {
 }
 /* End More ways */
 
-
 @media (min-width: 1200px) {
   #exploreTech #techCards .tCards {
-    width: calc(33.33% - 0.25em);
+    width: calc(33.33% - 1vw);
   }
   #exploreTech .tCards .tContent {
-    width: calc(300% + 0.25em);
+    width: calc(300% + 0.25vw);
   }
   #exploreTech .tCards .tContent::before {
-    width: calc(66.66% + 0.15em);
+    width: calc(66.66% + 0.15vw);
   }
   #exploreTech .tCards:nth-child(3n) .tContent {
-    margin-left: calc(-200% - 0.25em) !important;
+    margin-left: calc(-200% - 0.25vw) !important;
   }
   #exploreTech .tCards:nth-child(3n+1):not(:first-child) .tContent {
     margin-left: calc(0% - 0em) !important;
   }
   #exploreTech .tCards:nth-child(3n+2) .tContent {
-    margin-left: calc(-100% - 0.25em) !important;
+    margin-left: calc(-100% - 0.25vw) !important;
   }
 }
 
@@ -414,8 +485,9 @@ section#exploreTech #techCards {
 /* Boxes of Acheivements */
 #boxes {
 	scroll-snap-align: center;
-  border: 0px solid red;
+  border: 1px solid red;
   padding:5vw 2vw 1vw 3vw;
+  font-size: 3vw;
 }
 #boxes h2 {
   margin-bottom: 1vw;
@@ -425,26 +497,30 @@ section#exploreTech #techCards {
 #boxes #allBoxes {
   display: flex;
   flex-wrap: wrap;
-  padding: 2vw 6vw;
+  padding: 2vw 2vw;
 }
 #boxes .box {
   display: flex;
-  flex-basis: calc(33.33% - 0.6rem);
+  flex-basis: calc(33.33% - 2vw);
   transition: transform 0.5s ease;
-  margin: 0rem 0.5rem 2rem 0rem;
+  margin: 0vw 0.5vw 2vw 0;
+}
+#boxes .box:hover p{
+  color:#000;
 }
 #boxes .box h3 {
-  font-weight: 200;
-  font-size: 1rem;
-  margin-bottom: 1rem;
+  font-size: 60%;
+  font-weight: 400;
+  margin-bottom: 1vw;
+}
+#boxes .box i {
+  margin: 0.1vw 1vw 0 0;
+  color: #4682B4;
+  font-size: 60%;
 }
 #boxes .box p {
   color: gray;
-}
-#boxes .box i {
-  margin: 0.1rem 1rem 0rem 0rem;
-  font-size: 1.5rem;
-  color: #4682B4;
+  font-size: 40%;
 }
 #boxes .box:hover i {
   animation: bounce 1.1s infinite;
@@ -463,56 +539,12 @@ section#exploreTech #techCards {
 /* End of boxes */
 
 
-/* Start of four */
-  section#four {
-    padding:3vw 2vw 1vw 3vw;
-  }
-  #four #allNewCards {
-    padding: 2vw 6vw;
-    display:flex;
-    flex-wrap: wrap;
-    gap:0.25vw;
-    font-size: 1.4vw;
-  }
-  #four h2 {
-    margin-bottom: 1vw;
-    font-weight: 100;
-    font-size: 3vw;
-  }
-    #four .fourCards {
-    flex-basis: calc(50% - 0.25vw);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding:1vw;
-    background-color: hsl(0, 0%, 87%);
-  }
-  #four .fourCards:hover {
-    background-color: hsl(0, 0%, 90%);
-  }
-  #four .fourCards:active {
-    outline:3px solid var(--s-blue);
-  }
-  #four .fourCards bdo {
-    margin-top: 2vw;
-    margin-bottom: 1vw;
-    font-size: 120%;
-    font-weight: 600;
-  }
-  #four .fourCards p {
-    margin-bottom: 2vw;
-    font-size: 120%;
-  }
-  #four .fourCards i {
-    color: var(--s-blue);
-  }
-/* End of fourCards */
 
 
 /* Map and contact Us  */
   #contact {
     scroll-snap-align: center;
-    padding:3vw 2vw 1vw 3vw;
+    padding:0vw 2vw 1vw 0vw;
   }
   #contact h2 {
     margin-bottom: 1vw;
@@ -522,20 +554,30 @@ section#exploreTech #techCards {
   #contact #cMapForm {
     display: flex;
     justify-content: space-between;
-    padding:2vw 6vw;
+    padding:2vw 0vw;
   }
-  #contact #cMapForm #form {
+  #contact #cMapForm iframe {
+    flex-basis: 60%;
+  }
+  #contact #cMapForm #cDetails {
     display: flex;
     flex-direction: column;
-    padding: 2rem 2rem;
+    padding: 2vw;
   }
-  #contact #cMapForm #form .spanA {
+  #contact #cMapForm #cDetails h1 {
+    margin-bottom: 3vw;
+    font-size: 2vw;
+  }
+  #contact #cMapForm #cDetails .spanA {
+    margin-bottom: 0.5vw;
     color: #4682B4;
+    font-size: 2vw;
   }
-  #contact #cMapForm #form .spanB {
-    margin-bottom: 1rem;
+  #contact #cMapForm #cDetails .spanB {
+    margin-bottom: 3vw;
+    font-size: 2vw;
   }
-  /* Map and contact Us  */
+/* Map and contact Us  */
   
 
 
@@ -547,7 +589,6 @@ section#exploreTech #techCards {
     padding: 0.5vw 4vw 0.5vw 4vw;
     display: flex;
     justify-content: space-between;
-    margin-top: 10vw;
     background-color: hsl(0, 0%, 96%);
     font-size: 1.6vw;
   }
@@ -604,39 +645,11 @@ section#exploreTech #techCards {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 900px) {
+@media (min-width: 1200px) {
   section#about {
     flex-direction: row;
   }
-  section#four {
+  section#four #allNewCards {
     padding:2vw;
     display:flex;
     flex-direction: column;
@@ -644,3 +657,14 @@ section#exploreTech #techCards {
     gap:0.1vw 0.11vw;
   }
 }
+
+@media (max-width: 800px) {
+  section#four #allNewCards {
+    padding:2vw;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap:0.1vw 0.11vw;
+  }
+}
+
